--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "@stellars/jupyterlab_darcula_theme",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "IntelliJ Darcula Theme tweaked by Stellars",
     "keywords": [
         "jupyter",
         "jupyterlab",
         "jupyterlab-extension"
     ],
-    "homepage": "",
+    "homepage": "https://github.com/stellarshenson/jupyterlab_stellars_darcula_theme",
     "bugs": {
-        "url": "/issues"
+        "url": "https://github.com/stellarshenson/jupyterlab_stellars_darcula_theme/issues"
     },
     "license": "BSD-3-Clause",
     "author": {
@@ -25,7 +25,7 @@
     "types": "lib/index.d.ts",
     "repository": {
         "type": "git",
-        "url": ".git"
+        "url": "https://github.com/stellarshenson/jupyterlab_stellars_darcula_theme.git"
     },
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
