fixed issues with build system and introduced fix to the output scrolling in jupyterlab output cells

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2018"
+    "target": "ES2018",
+    "lib": ["ES2018", "DOM"],
+    "skipLibCheck": true
   },
   "include": ["src/*"]
 }
