--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@stellars/jupyterlab_darcula_theme",
-    "version": "1.0.35",
+    "name": "stellars_jupyterlab_darcula_theme",
+    "version": "1.0.40",
     "description": "IntelliJ Darcula Theme tweaked by Stellars",
     "keywords": [
         "jupyter",
