--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   push:
-    branches: main
+    branches: master
   pull_request:
     branches: '*'
 
@@ -24,19 +24,15 @@ jobs:
     - name: Install dependencies
       run: python -m pip install -U "jupyterlab>=4.0.0,<5"
 
-    - name: Lint the extension
-      run: |
-        set -eux
-        jlpm
-        jlpm run lint:check
-
     - name: Build the extension
       run: |
         set -eux
         python -m pip install .[test]
 
+        # pytest -vv -r ap --cov jupyterlab_stellars_darcula_theme
+
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "@stellars/jupyterlab_darcula_theme.*OK"
+        jupyter labextension list 2>&1 | grep -ie "jupyterlab_stellars_darcula_theme.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -45,7 +41,7 @@ jobs:
 
         pip install build
         python -m build
-        pip uninstall -y "stellars_jupyterlab_darcula_theme" jupyterlab
+        pip uninstall -y "jupyterlab_stellars_darcula_theme" jupyterlab
 
     - name: Upload extension packages
       uses: actions/upload-artifact@v4
@@ -62,7 +58,7 @@ jobs:
     - name: Install Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.12'
         architecture: 'x64'
     - uses: actions/download-artifact@v4
       with:
@@ -76,17 +72,6 @@ jobs:
 
         pip install "jupyterlab>=4.0.0,<5" stellars_jupyterlab_darcula_theme*.whl
 
-
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "@stellars/jupyterlab_darcula_theme.*OK"
+        jupyter labextension list 2>&1 | grep -ie "jupyterlab_stellars_darcula_theme.*OK"
         python -m jupyterlab.browser_check --no-browser-test
-
-
-  check_links:
-    name: Check Links
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v4
-      - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-      - uses: jupyterlab/maintainer-tools/.github/actions/check-links@v1
