--- a/.github/workflows/prep-release.yml
+++ b/.github/workflows/prep-release.yml
@@ -42,6 +42,9 @@ jobs:
           branch: ${{ github.event.inputs.branch }}
           since: ${{ github.event.inputs.since }}
           since_last_stable: ${{ github.event.inputs.since_last_stable }}
+          steps_to_skip: "build-changelog"
+        env:
+          RH_SINCE_LAST_STABLE: 'true'
 
       - name: "** Next Step **"
         run: |
